--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
   },
   "dependencies": {
     "@deepcase/hasura": "^0.0.6",
+    "@deepcase/react-hasura": "^0.0.1",
+    "@deepcase/store": "^0.0.32",
     "apollo-boost": "^0.4.9",
     "apollo-server": "^2.21.0",
     "dotenv": "^8.2.0",
     "graphql": "^15.5.0",
-    "graphql-tag": "^2.11.0"
+    "graphql-tag": "^2.11.0",
+    "uniqid": "^5.3.0"
   },
-  "devDependencies": {},
   "engines": {
     "node": "^14.15.0"
   }
