--- a/package.json
+++ b/package.json
@@ -1,24 +1,29 @@
 {
-  "name": "@deepcase/deepgraph",
+  "name": "@deepcase/deepgraph-app",
+  "private": true,
   "version": "0.0.1",
   "scripts": {
-    "gitpod-migrate": "export MIGRATIONS_HASURA_PATH=localhost:8080; export MIGRATIONS_HASURA_SSL=0; export MIGRATIONS_HASURA_SECRET=myadminsecretkey; export MIGRATIONS_EXAMPLE_URL=$(gp url 3001); export $(grep -v '^#' .env | xargs); yes | DEBUG='deepcase:*' npx migrate up --compiler='ts:@deepcase/hasura/compiler/index.js'",
-    "gitpod-unmigrate": "export MIGRATIONS_HASURA_PATH=localhost:8080; export MIGRATIONS_HASURA_SSL=0; export MIGRATIONS_HASURA_SECRET=myadminsecretkey; export MIGRATIONS_EXAMPLE_URL=$(gp url 3001); export $(grep -v '^#' .env | xargs); yes | DEBUG='deepcase:*' npx migrate down --compiler='ts:@deepcase/hasura/compiler/index.js'",
-    "gitpod": "export MIGRATIONS_HASURA_PATH=localhost:8080; export MIGRATIONS_HASURA_SSL=0; export MIGRATIONS_HASURA_SECRET=myadminsecretkey; export MIGRATIONS_EXAMPLE_URL=$(gp url 3001); export HASURA_PATH=$(echo $(gp url 8080) | awk -F[/:] '{print $4}'); export HASURA_SSL=1; export PORT=3001; export $(grep -v '^#' .env | xargs); npx next dev -p $PORT",
-    "local-migrate": "export MIGRATIONS_HASURA_PATH=localhost:8080; export MIGRATIONS_HASURA_SSL=0; export MIGRATIONS_HASURA_SECRET=myadminsecretkey; export MIGRATIONS_EXAMPLE_URL=http://localhost:3001; export $(grep -v '^#' .env | xargs); yes | DEBUG='deepcase:*' npx migrate up --compiler='ts:@deepcase/hasura/compiler/index.js'",
-    "local-unmigrate": "export MIGRATIONS_HASURA_PATH=localhost:8080; export MIGRATIONS_HASURA_SSL=0; export MIGRATIONS_HASURA_SECRET=myadminsecretkey; export MIGRATIONS_EXAMPLE_URL=http://localhost:3001; export $(grep -v '^#' .env | xargs); yes | DEBUG='deepcase:*' npx migrate down --compiler='ts:@deepcase/hasura/compiler/index.js'",
-    "local": "export MIGRATIONS_HASURA_PATH=localhost:8080; export MIGRATIONS_HASURA_SSL=0; export MIGRATIONS_HASURA_SECRET=myadminsecretkey; export MIGRATIONS_EXAMPLE_URL=http://localhost:3001; export HASURA_PATH=localhost:8080; export HASURA_SSL=0; export PORT=3001; export $(grep -v '^#' .env | xargs); npx next dev -p $PORT"
+    "dev": "next dev -p $PORT",
+    "build": "next build",
+    "export": "next export",
+    "start": "next start",
+    "gitpod": "export HASURA_PATH=$(echo $(gp url 8080) | awk -F[/:] '{print $4}'); export HASURA_SSL=1; export PORT=3002; export $(grep -v '^#' .env | xargs); npx next dev -p $PORT",
+    "local": "export HASURA_PATH=localhost:8080; export HASURA_SSL=0; export PORT=3002; export $(grep -v '^#' .env | xargs); npx next dev -p $PORT"
   },
   "dependencies": {
-    "@deepcase/hasura": "^0.0.6",
-    "apollo-boost": "^0.4.9",
-    "apollo-server": "^2.21.0",
+    "@deepcase/deepgraph": "^0.0.4",
     "dotenv": "^8.2.0",
-    "graphql": "^15.5.0",
-    "graphql-tag": "^2.11.0"
+    "next": "^10.0.9",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
-  "devDependencies": {},
   "engines": {
     "node": "^14.15.0"
+  },
+  "devDependencies": {
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.3",
+    "dotenv-webpack": "^7.0.2",
+    "webpack": "^5.28.0"
   }
 }
