--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
     "@deepcase/deepgraph": "^0.0.4",
     "dotenv": "^8.2.0",
     "next": "^10.0.9",
+    "normalize.css": "^8.0.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-force-graph": "^1.41.3",
+    "react-resize-detector": "^6.7.1",
+    "three-spritetext": "^1.6.2"
   },
   "engines": {
     "node": "^14.15.0"
