--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@deepcase/deepgraph": "^0.0.4",
+    "@material-ui/core": "^4.11.4",
     "dotenv": "^8.2.0",
     "next": "^10.0.9",
     "normalize.css": "^8.0.1",
