--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@deepcase/deepgraph": "^0.0.4",
     "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
     "dotenv": "^8.2.0",
     "next": "^10.0.9",
     "normalize.css": "^8.0.1",
