--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "dev": "npm run unsafe-dev"
   },
   "dependencies": {
-    "@deepcase/deepgraph": "^0.0.4",
+    "@deepcase/deepgraph": "^0.0.6",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
+    "@react-hook/debounce": "^3.0.0",
     "dotenv": "^8.2.0",
     "next": "^10.0.9",
     "normalize.css": "^8.0.1",
