--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-dom": "^17.0.2",
     "react-force-graph": "^1.41.3",
     "react-resize-detector": "^6.7.1",
-    "three-spritetext": "^1.6.2"
+    "three-spritetext": "^1.6.2",
+    "use-debounce": "^6.0.1"
   },
   "engines": {
     "node": "^14.15.0"
