--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "dev": "npm run unsafe-dev"
   },
   "dependencies": {
+    "@apollo/client": "^3.3.19",
     "@deepcase/deepgraph": "^0.0.7",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "@react-hook/debounce": "^3.0.0",
     "dotenv": "^8.2.0",
+    "jsonwebtoken": "^8.5.1",
     "next": "^10.0.9",
     "normalize.css": "^8.0.1",
     "react": "^17.0.2",
