--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-force-graph": "^1.41.3",
+    "react-monaco-editor": "^0.43.0",
     "react-resize-detector": "^6.7.1",
     "three-spritetext": "^1.6.2",
     "use-debounce": "^6.0.1"
