--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@deepcase/deepgraph-app",
+  "name": "@deepcase/deeplinks-app",
   "private": true,
   "version": "0.0.1",
   "scripts": {
@@ -11,7 +11,6 @@
   },
   "dependencies": {
     "@apollo/client": "^3.3.19",
-    "@deepcase/deepgraph": "^0.0.9",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "@react-hook/debounce": "^3.0.0",
