--- a/.github/workflows/dockerize.yaml
+++ b/.github/workflows/dockerize.yaml
@@ -22,7 +22,7 @@ jobs:
           cp .docker.env .env
           export $(grep -v '^#' .env | xargs);
       - name: Install
-        run: npm ci
+        run: npm i
       - name: Build project
         run: npm run build
       - name: Log in to Docker Hub
