--- a/.github/workflows/dockerize.yaml
+++ b/.github/workflows/dockerize.yaml
@@ -16,13 +16,13 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
         with:
-          node-version: '14.17'
+          node-version: '15.10'
       - name: env
         run: |
           cp .docker.env .env
           export $(grep -v '^#' .env | xargs);
       - name: Install
-        run: npm i
+        run: npm ci
       - name: Build project
         run: npm run build
       - name: Log in to Docker Hub
