--- a/.github/workflows/dockerize.yaml
+++ b/.github/workflows/dockerize.yaml
@@ -26,13 +26,13 @@ jobs:
       - name: Build project
         run: npm run build
       - name: Log in to Docker Hub
-        uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
+        uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_TEST_USERNAME }}
           password: ${{ secrets.DOCKER_TEST_PASSWORD }}
       - name: Extract metadata (tags, labels) for Docker
         id: meta
-        uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
+        uses: docker/metadata-action@v3
         with:
           images: menzorg/deeplinks-app
       - name: build docker image and push
