--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@apollo/client": "^3.3.19",
     "@deepcase/deeplinks": "^0.0.1",
+    "@deepcase/materialized-path": "^0.0.10",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "@react-hook/debounce": "^3.0.0",
