--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   },
   "dependencies": {
     "@apollo/client": "^3.3.19",
-    "@deepcase/deeplinks": "^0.0.1",
-    "@deepcase/materialized-path": "^0.0.10",
+    "@deepcase/deeplinks": "0.0.2",
+    "@deepcase/materialized-path": "0.0.11",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "@react-hook/debounce": "^3.0.0",
