--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     "module": "commonjs",
     "moduleResolution": "node",
     "target": "es2015",
+    "skipLibCheck": true,
     "lib": [
       "dom",
       "es6",
