--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "unsafe-dev": "next dev -p $PORT",
     "build": "next build",
     "export": "next export",
-    "start": "next start",
+    "start": "next start -p $PORT",
     "dev": "npm run unsafe-dev"
   },
   "dependencies": {
