--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,6 +37,7 @@ services:
       MIGRATIONS_HASURA_PATH: graphql-engine:8080
       MIGRATIONS_HASURA_SSL: 0
       MIGRATIONS_HASURA_SECRET: myadminsecretkey
+      PORT: 3007
   deeplinks:
     image: menzorg/deeplinks:docker-hub-menzorg-deepcase-main
     depends_on:
