--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,7 +37,9 @@ services:
       MIGRATIONS_HASURA_PATH: graphql-engine:8080
       MIGRATIONS_HASURA_SSL: 0
       MIGRATIONS_HASURA_SECRET: myadminsecretkey
-      PORT: 3007
+      NEXT_PUBLIC_HASURA_SSL: 0
+      NEXT_PUBLIC_HASURA_PATH: graphql-engine:8080
+      JWT_SECRET: "3EK6D+o0+c7tzBNVfjpMkNDi2yARAAKzQlk8O2IKoxFQu4nF7EdAh8s3TwpHwrdWT6R"
   deeplinks:
     image: menzorg/deeplinks:docker-hub-menzorg-deepcase-main
     depends_on:
