--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.3.19",
-    "@deepcase/deeplinks": "0.0.2",
+    "@deepcase/deeplinks": "^0.0.3",
     "@deepcase/materialized-path": "0.0.11",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
