--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@apollo/client": "^3.3.19",
     "@deepcase/deeplinks": "^0.0.3",
     "@deepcase/materialized-path": "0.0.11",
+    "@graphiql/toolkit": "^0.2.2",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "@react-hook/debounce": "^3.0.0",
     "dotenv": "^8.2.0",
+    "graphiql": "^1.4.2",
     "jsonwebtoken": "^8.5.1",
     "next": "^10.0.9",
     "normalize.css": "^8.0.1",
