--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-force-graph": "^1.41.3",
+    "react-ga": "^3.3.0",
     "react-monaco-editor": "^0.43.0",
     "react-resize-detector": "^6.7.1",
+    "react-yandex-metrika": "^2.6.0",
     "three-spritetext": "^1.6.2",
     "use-debounce": "^6.0.1"
   },
