--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@deepcase/deeplinks",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "scripts": {
     "package:build": "npx tsc --project tsconfig.json && (cd ./migrations && rm -f ./*.js; rm -f ./*.js.map; rm -f ./*.d.ts)",
     "package:unbuild": "rm -f ./*.js; rm -f ./*.js.map; rm -f ./*.d.ts && (cd ./migrations && rm -f ./*.js; rm -f ./*.js.map; rm -f ./*.d.ts) && (cd ./imports && rm -f ./*.js; rm -f ./*.js.map; rm -f ./*.d.ts) && (cd ./imports/gql && rm -f ./*.js; rm -f ./*.js.map; rm -f ./*.d.ts)",
@@ -15,15 +15,14 @@
     "@deepcase/materialized-path": "0.0.12",
     "@deepcase/react-hasura": "^0.0.2",
     "@deepcase/store": "^0.0.32",
+    "@types/node": "^14.14.37",
+    "@types/react": "^17.0.3",
     "apollo-boost": "^0.4.9",
     "apollo-server": "^2.21.0",
     "dotenv": "^8.2.0",
     "graphql": "^15.5.0",
     "graphql-tag": "^2.11.0",
-    "uniqid": "^5.3.0",
-    "@types/react": "^17.0.3"
-  },
-  "devDependencies": {
+    "uniqid": "^5.3.0"
   },
   "peerDependencies": {
     "react": "*"
