--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "@deepcase/deeplinks",
-  "version": "0.0.10",
+  "version": "0.0.11",
   "scripts": {
     "package:build": "npx tsc --project tsconfig.json && (cd ./migrations && rm -f ./*.js; rm -f ./*.js.map; rm -f ./*.d.ts)",
     "package:unbuild": "rm -f ./*.js; rm -f ./*.js.map; rm -f ./*.d.ts && (cd ./migrations && rm -f ./*.js; rm -f ./*.js.map; rm -f ./*.d.ts) && (cd ./imports && rm -f ./*.js; rm -f ./*.js.map; rm -f ./*.d.ts) && (cd ./imports/gql && rm -f ./*.js; rm -f ./*.js.map; rm -f ./*.d.ts)",
     "package:publish": "npm run package:build; npm publish --access public; npm run package:unbuild",
-    "migrate": "export $(grep -v '^#' .env | xargs); npx migrate up --compiler='ts:@deepcase/hasura/compiler/index.js'",
-    "unmigrate": "export $(grep -v '^#' .env | xargs); npx migrate down --compiler='ts:@deepcase/hasura/compiler/index.js'",
+    "migrate": "export $(grep -v '^#' .env | xargs); npx migrate up --compiler='ts:./compiler/index.js'",
+    "unmigrate": "export $(grep -v '^#' .env | xargs); npx migrate down --compiler='ts:./compiler/index.js'",
     "hasura-docker": "(export JWT_SECRET='{\"type\":\"HS256\", \"key\": \"3EK6FD+o0+c7tzBNVfjpMkNDi2yARAAKzQlk8O2IKoxQu4nF7EdAh8s3TwpHwrdWT6R\"}'; export $(grep -v '^#' .env | xargs); (export DOCKERHOST=$(ifconfig | grep -E \"([0-9]{1,3}\\.){3}[0-9]{1,3rep -v 127.0.0.1 | awk '{ print $2 }' | cut -f2 -d: | head -n1); cd ./node_modules/@deepcase/hasura/local; docker-compose up -d))"
   },
   "dependencies": {
