--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@deepcase/deeplinks-app",
-  "version": "0.0.10",
+  "version": "0.0.11",
   "scripts": {
     "unsafe-dev": "next dev -p $PORT",
     "build": "next build",
@@ -18,9 +18,11 @@
     "@material-ui/icons": "^4.11.2",
     "@react-hook/debounce": "^3.0.0",
     "dotenv": "^8.2.0",
+    "dotenv-load": "^2.0.0",
     "graphiql": "^1.4.2",
     "jsonwebtoken": "^8.5.1",
     "next": "^10.2.3",
+    "next-env": "^1.1.1",
     "normalize.css": "^8.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
