--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "normalize.css": "^8.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-draggable": "^4.4.4",
     "react-force-graph": "^1.41.3",
     "react-ga": "^3.3.0",
     "react-monaco-editor": "^0.43.0",
