--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@deepcase/deeplinks-app",
   "version": "0.0.16",
   "scripts": {
+    "migrate": "(cd node_modules/@deepcase/deeplinks; npm i; npm run unmigrate; npm run migrate;)",
     "unsafe-dev": "next dev -p $PORT",
     "build": "next build",
     "export": "next export",
