--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.16",
   "scripts": {
     "migrate": "(cd node_modules/@deepcase/deeplinks; npm i; npm run unmigrate; npm run migrate;)",
+    "heroku-postbuild": "node start.js",
     "unsafe-dev": "next dev -p $PORT",
     "build": "next build",
     "export": "next export",
