--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@deepcase/deeplinks-app",
   "version": "0.0.16",
   "scripts": {
-    "migrate": "export MIGRATIONS_HASURA_PATH=localhost:8080; export MIGRATIONS_HASURA_SSL=0; export MIGRATIONS_HASURA_SECRET=myadminsecretkey; (cd node_modules/@deepcase/deeplinks; npm i; npm run unmigrate; npm run migrate;)",
+    "migrate": "export MIGRATIONS_HASURA_PATH=localhost:8080; export MIGRATIONS_HASURA_SSL=0; export MIGRATIONS_HASURA_SECRET=myadminsecretkey; (cd node_modules/@deepcase/deeplinks; npm run unmigrate; npm run migrate;)",
     "heroku-postbuild": "node start.js",
     "unsafe-dev": "next dev -p $PORT",
     "build": "next build",
