--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "use-debounce": "^6.0.1"
   },
   "engines": {
-    "node": "^14.15.0"
+    "node": ">=15.10",
+    "npm": ">=7.5.3"
   },
   "devDependencies": {
     "@types/react": "^17.0.3",
