--- a/app.json
+++ b/app.json
@@ -21,8 +21,13 @@
       "size": "free"
     }
   }],
-  "image": "menzorg/deeplinks-app:docker-hub-menzorg-deepcase",
   "buildpacks": [
+    {
+      "url": "https://github.com/Menzorg/hasura-1.3.2-buildpack.git"
+    },
+    {
+      "url": "heroku-community/apt"
+    },
     {
       "url": "heroku/nodejs"
     }],
