--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,9 +30,10 @@
     "**/*.tsx"
   ],
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "electron",
   ],
   "typeRoots": [
     "./node_modules/@types"
-  ],
+  ]
 }
