--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.0.16",
   "scripts": {
     "migrate": "export MIGRATIONS_HASURA_PATH=localhost:8080; export MIGRATIONS_HASURA_SSL=0; export MIGRATIONS_HASURA_SECRET=myadminsecretkey; (cd node_modules/@deepcase/deeplinks; npm run unmigrate; npm run migrate;)",
-    "heroku-start": "next start -p $PORT",
+    "heroku-start": "node start.js",
+    "heroku-next-start": "next start -p $NEXT-PORT",
     "unsafe-dev": "next dev -p $PORT",
-    "build": "next build",
+    "build": "echo 'build'",
     "export": "next export",
     "start": "next start",
     "dev": "npm run unsafe-dev",
