--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.0.16",
   "scripts": {
     "migrate": "export MIGRATIONS_HASURA_PATH=localhost:8080; export MIGRATIONS_HASURA_SSL=0; export MIGRATIONS_HASURA_SECRET=myadminsecretkey; (cd node_modules/@deepcase/deeplinks; npm run unmigrate; npm run migrate;)",
-    "heroku-start": "node start.js",
-    "heroku-next-start": "next start -p $NEXTPORT",
+    "heroku-start": "next build && node start.js",
+    "heroku-next-start": "next start -p $PORT",
     "unsafe-dev": "next dev -p $PORT",
-    "build": "echo 'build'",
+    "build": "next build",
     "export": "next export",
     "start": "next start",
     "dev": "npm run unsafe-dev",
@@ -45,7 +45,6 @@
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
     "dotenv-webpack": "^7.0.2",
-    "express": "^4.16.4",
     "webpack": "^5.28.0"
   }
 }
