--- a/electron/package.json
+++ b/electron/package.json
@@ -21,7 +21,7 @@
   },
   "dependencies": {
     "@capacitor-community/electron": "^4.0.1",
-    "@deepcase/deeplinks": "0.0.21",
+    "@deepcase/deeplinks": "0.0.25",
     "chokidar": "~3.5.2",
     "electron-is-dev": "~2.0.0",
     "electron-serve": "~1.1.0",
@@ -29,6 +29,7 @@
     "electron-updater": "~4.3.9",
     "electron-window-state": "~5.0.3",
     "express": "^4.17.1",
+    "fix-path": "^4.0.0",
     "fkill": "^7.2.1",
     "socket.io": "^4.2.0"
   },
@@ -41,5 +42,8 @@
   "keywords": [
     "capacitor",
     "electron"
-  ]
+  ],
+  "build": {
+    "asar": false
+  }
 }
