--- a/electron/electron-builder.config.json
+++ b/electron/electron-builder.config.json
@@ -24,5 +24,9 @@
   "mac": {
     "category": "your.app.category.type",
     "target": "dmg"
+  },
+  "asar": false,
+  "build": {
+    "asar": false
   }
 }
