--- a/electron/package.json
+++ b/electron/package.json
@@ -21,7 +21,8 @@
   },
   "dependencies": {
     "@capacitor-community/electron": "^4.0.1",
-    "@deepcase/deeplinks": "0.0.25",
+    "@deepcase/deeplinks": "0.0.27",
+    "@deepcase/hasura": "0.0.20",
     "chokidar": "~3.5.2",
     "electron-is-dev": "~2.0.0",
     "electron-serve": "~1.1.0",
