--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "@deepcase/deeplinks",
-  "version": "0.0.27",
+  "version": "0.0.28",
   "scripts": {
-    "package:build": "tsc --project tsconfig.json && (cd ./migrations && rm -f ./*.js; rm -f ./*.js.map; rm -f ./*.d.ts)",
-    "package:unbuild": "rm -f ./*.js; rm -f ./*.js.map; rm -f ./*.d.ts && (cd ./migrations && rm -f ./*.js; rm -f ./*.js.map; rm -f ./*.d.ts) && (cd ./imports && rm -f ./*.js; rm -f ./*.js.map; rm -f ./*.d.ts) && (cd ./imports/gql && rm -f ./*.js; rm -f ./*.js.map; rm -f ./*.d.ts)",
+    "package:build": "tsc --project tsconfig.json && (cd ./migrations && rimraf ./*.js && rimraf ./*.js.map && rimraf ./*.d.ts)",
+    "package:unbuild": "rimraf ./*.js && rimraf ./*.js.map && rimraf ./*.d.ts && (cd ./migrations && rimraf ./*.js && rimraf ./*.js.map && rimraf ./*.d.ts && cd ../) && (cd ./imports && rimraf ./*.js && rimraf ./*.js.map && rimraf ./*.d.ts && cd ../) && (cd ./imports/gql && rimraf ./*.js && rimraf ./*.js.map && rimraf ./*.d.ts && cd ../)",
     "package:publish": "npm run package:build && npm publish --access public && npm run package:unbuild",
-    "migrate": "export $(grep -v '^#' .env | xargs); npx migrate up --compiler='ts:./compiler/index.js'",
-    "unmigrate": "export $(grep -v '^#' .env | xargs); npx migrate down --compiler='ts:./compiler/index.js'",
-    "hasura-docker": "(export JWT_SECRET='{\"type\":\"HS256\", \"key\": \"3EK6FD+o0+c7tzBNVfjpMkNDi2yARAAKzQlk8O2IKoxQu4nF7EdAh8s3TwpHwrdWT6R\"}'; export $(grep -v '^#' .env | xargs); (export DOCKERHOST=$(ifconfig | grep -E \"([0-9]{1,3}\\.){3}[0-9]{1,3rep -v 127.0.0.1 | awk '{ print $2 }' | cut -f2 -d: | head -n1); cd ./node_modules/@deepcase/hasura/local; docker-compose up -d))"
+    "migrate": "npx migrate up --compiler='ts:./compiler/index.js'",
+    "unmigrate": "npx migrate down --compiler='ts:./compiler/index.js'",
+    "hasura-docker": "cross-env-shell JWT_SECRET='{\\\"type\\\":\\\"HS256\\\",\\\"key\\\":\\\"3EK6FD+o0+c7tzBNVfjpMkNDi2yARAAKzQlk8O2IKoxQu4nF7EdAh8s3TwpHwrdWT6R\\\"}' npm run hasura-docker-core",
+    "hasura-docker-core": "cd ./node_modules/@deepcase/hasura/local && docker-compose up -d"
   },
   "dependencies": {
     "@apollo/client": "^3.4.9",
@@ -18,10 +19,13 @@
     "@types/react": "^17.0.19",
     "apollo-boost": "^0.4.9",
     "apollo-server": "^2.21.0",
+    "cross-env": "^7.0.3",
     "dotenv": "^8.2.0",
     "graphql": "^15.5.0",
     "graphql-tag": "^2.11.0",
-    "uniqid": "^5.3.0"
+    "rimraf": "^3.0.2",
+    "uniqid": "^5.3.0",
+    "wait-on": "^6.0.0"
   },
   "peerDependencies": {
     "react": "*"
@@ -30,6 +34,7 @@
     "node": "^14.15.0"
   },
   "devDependencies": {
+    "public-ip-cli": "^2.0.0",
     "typescript": "^4.4.3"
   }
 }
