--- a/package.json
+++ b/package.json
@@ -1,21 +1,20 @@
 {
   "name": "@deepcase/deeplinks-app",
-  "version": "0.0.18",
+  "version": "0.0.19",
   "scripts": {
-    "unsafe-dev": "next dev -p ${PORT}",
+    "dev": "next dev",
     "build": "next build",
     "export": "next export",
-    "start": "eval \"fkill --silent :$PORT\"; next start",
-    "dev": "eval \"fkill --silent :$PORT\"; npm run unsafe-dev",
-    "electron": "(cd electron; npx electron-packager . --overwrite --platform=mas)",
-    "package:publish": "npm run build; npm publish --access public;"
+    "start": "next start",
+    "electron": "(cd electron && npx electron-packager . --overwrite)",
+    "package:publish": "npm run build && npm publish --access public"
   },
   "dependencies": {
     "@apollo/client": "^3.3.19",
     "@capacitor-community/electron": "^4.0.3",
     "@capacitor/core": "^3.2.3",
-    "@deepcase/deeplinks": "0.0.26",
-    "@deepcase/hasura": "0.0.20",
+    "@deepcase/deeplinks": "0.0.29",
+    "@deepcase/hasura": "0.0.22",
     "@graphiql/toolkit": "^0.2.2",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
@@ -23,6 +22,7 @@
     "@types/electron": "^1.6.10",
     "Deep.Case": "file:electron",
     "axios": "^0.21.4",
+    "cross-env": "^7.0.3",
     "dotenv": "^8.2.0",
     "dotenv-load": "^2.0.0",
     "graphiql": "^1.4.2",
