--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
   "name": "@deepcase/deeplinks-app",
-  "version": "0.0.20",
+  "version": "0.0.21",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "export": "next export",
     "start": "next start",
-    "electron": "(cd electron && npx electron-packager . --overwrite)",
+    "electron-dev": "cd electron && cd .. && npx cap copy electron && npx cap open electron",
+    "electron-build": "(cd electron && npx electron-packager . --overwrite)",
     "package:publish": "npm run build && npm publish --access public"
   },
   "dependencies": {
     "@apollo/client": "^3.3.19",
     "@capacitor-community/electron": "^4.0.3",
     "@capacitor/core": "^3.2.3",
-    "@deepcase/deeplinks": "0.0.30",
+    "@deepcase/deeplinks": "0.0.34",
     "@deepcase/hasura": "0.0.22",
     "@graphiql/toolkit": "^0.2.2",
     "@material-ui/core": "^4.11.4",
