--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^8.2.0",
     "dotenv-load": "^2.0.0",
     "graphiql": "^1.4.2",
+    "http-proxy-middleware": "^2.0.1",
     "jsonwebtoken": "^8.5.1",
     "next": "^10.2.3",
     "next-env": "^1.1.1",
