--- a/app.json
+++ b/app.json
@@ -24,6 +24,9 @@
       "url": "https://github.com/Menzorg/hasura-1.3.2-buildpack.git"
     },
     {
+      "url": "https://github.com/carloluis/heroku-buildpack-vim"
+    },
+    {
       "url": "heroku-community/apt"
     },
     {
