next on other port fix

--- a/app.json
+++ b/app.json
@@ -14,9 +14,13 @@
       "description": "Use devDependencies.",
       "value": "false"
     },
+    "NEXTPORT": {
+      "description": "App port.",
+      "value": "3007"
+    },
     "CHECK": {
       "description": "check cached or not heroku",
-      "value": "asd3"
+      "value": "asd4"
     }
   },
   "buildpacks": [
