--- a/app.json
+++ b/app.json
@@ -27,6 +27,9 @@
       "url": "https://github.com/carloluis/heroku-buildpack-vim"
     },
     {
+      "url": "https://github.com/ryandotsmith/nginx-buildpack.git"
+    },
+    {
       "url": "heroku-community/apt"
     },
     {
