Revert "cleaning for heroku"
This reverts commit 9850f601e9af936282f710305b9b45655dd2dc2e.

--- a/app.json
+++ b/app.json
@@ -11,8 +11,8 @@
   "success_url": "/",
   "env": {
     "NPM_CONFIG_PRODUCTION": {
-      "description": "Dont use devDependencies.",
-      "value": "true"
+      "description": "Use devDependencies.",
+      "value": "false"
     },
     "NEXTPORT": {
       "description": "App port.",
