--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/electron": "^1.6.10",
     "Deep.Case": "file:electron",
     "axios": "^0.21.4",
+    "classnames": "^2.3.1",
     "cross-env": "^7.0.3",
     "dotenv": "^8.2.0",
     "dotenv-load": "^2.0.0",
