--- a/electron/electron-builder.config.json
+++ b/electron/electron-builder.config.json
@@ -23,7 +23,8 @@
   },
   "mac": {
     "category": "your.app.category.type",
-    "target": "dmg"
+    "target": "dmg",
+    "icon": "assets/appIcon.png"
   },
   "asar": false,
   "build": {
