--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,9 @@
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "isolatedModules": true,
-    "declaration": true
-  }
+    "declaration": true,
+  },
+  "exclude": [
+    "migrations"
+  ]
 }
