--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@deepcase/deeplinks",
-  "version": "0.0.35",
+  "version": "0.0.36",
   "scripts": {
     "package:build": "tsc --project tsconfig.json && (cd ./migrations && rimraf ./*.js && rimraf ./*.js.map && rimraf ./*.d.ts)",
     "package:unbuild": "rimraf ./*.js && rimraf ./*.js.map && rimraf ./*.d.ts && (cd ./migrations && rimraf ./*.js && rimraf ./*.js.map && rimraf ./*.d.ts && cd ../) && (cd ./imports && rimraf ./*.js && rimraf ./*.js.map && rimraf ./*.d.ts && cd ../) && (cd ./imports/gql && rimraf ./*.js && rimraf ./*.js.map && rimraf ./*.d.ts && cd ../)",
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.4.9",
-    "@deepcase/materialized-path": "0.0.20",
+    "@deepcase/materialized-path": "0.0.22",
     "@deepcase/react-hasura": "0.0.5",
     "@deepcase/store": "^0.0.32",
     "@types/node": "^14.17.14",
@@ -29,12 +29,14 @@
     "wait-on": "^6.0.0"
   },
   "peerDependencies": {
-    "react": "*"
+    "react": "*",
+    "@deepcase/hasura": "*"
   },
   "engines": {
     "node": "^14.15.0"
   },
   "devDependencies": {
+    "@deepcase/hasura": "0.0.30",
     "typescript": "^4.4.3"
   }
 }
