--- a/electron/package.json
+++ b/electron/package.json
@@ -22,7 +22,8 @@
   "dependencies": {
     "@capacitor-community/electron": "^4.0.1",
     "@deepcase/deeplinks": "0.0.48",
-    "@deepcase/hasura": "0.0.30",
+    "@deepcase/hasura": "0.0.33",
+    "@deepcase/materialized-path": "0.0.29",
     "chokidar": "~3.5.2",
     "electron-is-dev": "~2.0.0",
     "electron-serve": "~1.1.0",
