--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "@apollo/client": "^3.3.19",
     "@capacitor-community/electron": "^4.0.3",
     "@capacitor/core": "^3.2.3",
-    "@deepcase/deeplinks": "0.0.48",
-    "@deepcase/hasura": "0.0.30",
+    "@deepcase/deeplinks": "0.0.49",
+    "@deepcase/hasura": "0.0.33",
+    "@deepcase/materialized-path": "0.0.29",
     "@graphiql/toolkit": "^0.2.2",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
