--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@deepcase/deeplinks",
-  "version": "0.0.52",
+  "name": "@deep-foundation/deeplinks",
+  "version": "0.0.1",
   "scripts": {
     "package:build": "tsc --project tsconfig.json && (cd ./migrations && rimraf ./*.js && rimraf ./*.js.map && rimraf ./*.d.ts)",
     "package:unbuild": "rimraf ./*.js && rimraf ./*.js.map && rimraf ./*.d.ts && (cd ./migrations && rimraf ./*.js && rimraf ./*.js.map && rimraf ./*.d.ts && cd ../) && (cd ./imports && rimraf ./*.js && rimraf ./*.js.map && rimraf ./*.d.ts && cd ../) && (cd ./imports/gql && rimraf ./*.js && rimraf ./*.js.map && rimraf ./*.d.ts && cd ../)",
@@ -8,13 +8,13 @@
     "migrate": "npx migrate up --compiler=ts:./compiler/index.js",
     "unmigrate": "npx migrate down --compiler=ts:./compiler/index.js",
     "hasura-docker": "cross-env JWT_SECRET=\"{\\\"type\\\":\\\"HS256\\\",\\\"key\\\":\\\"3EK6FD+o0+c7tzBNVfjpMkNDi2yARAAKzQlk8O2IKoxQu4nF7EdAh8s3TwpHwrdWT6R\\\"}\" npm run hasura-docker-core",
-    "hasura-docker-core": "cd ./node_modules/@deepcase/hasura/local && docker-compose up -d"
+    "hasura-docker-core": "cd ./node_modules/@deep-foundation/hasura/local && docker-compose up -d"
   },
   "dependencies": {
     "@apollo/client": "^3.4.9",
-    "@deepcase/materialized-path": "0.0.33",
-    "@deepcase/react-hasura": "0.0.5",
-    "@deepcase/store": "^0.0.32",
+    "@deep-foundation/materialized-path": "^0.0.3",
+    "@deep-foundation/react-hasura": "^0.0.3",
+    "@deep-foundation/store": "^0.0.3",
     "@types/node": "^14.17.14",
     "@types/react": "^17.0.19",
     "apollo-boost": "^0.4.9",
@@ -29,14 +29,14 @@
     "wait-on": "^6.0.0"
   },
   "peerDependencies": {
-    "react": "*",
-    "@deepcase/hasura": "*"
+    "@deep-foundation/hasura": "*",
+    "react": "*"
   },
   "engines": {
     "node": "^14.15.0"
   },
   "devDependencies": {
-    "@deepcase/hasura": "0.0.33",
+    "@deep-foundation/hasura": "^0.0.3",
     "typescript": "^4.4.3"
   }
 }
