--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "node": "^14.15.0"
   },
   "devDependencies": {
-    "@deep-foundation/hasura": "^0.0.3",
+    "@deep-foundation/hasura": "0.0.4",
     "typescript": "^4.4.3"
   }
 }
