--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@deep-foundation/deeplinks",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "scripts": {
     "package:build": "tsc --project tsconfig.json && (cd ./migrations && rimraf ./*.js && rimraf ./*.js.map && rimraf ./*.d.ts)",
     "package:unbuild": "rimraf ./*.js && rimraf ./*.js.map && rimraf ./*.d.ts && (cd ./migrations && rimraf ./*.js && rimraf ./*.js.map && rimraf ./*.d.ts && cd ../) && (cd ./imports && rimraf ./*.js && rimraf ./*.js.map && rimraf ./*.d.ts && cd ../) && (cd ./imports/gql && rimraf ./*.js && rimraf ./*.js.map && rimraf ./*.d.ts && cd ../)",
@@ -24,6 +24,7 @@
     "graphql": "^15.5.0",
     "graphql-tag": "^2.11.0",
     "internal-ip": "^6.2.0",
+    "jsonwebtoken": "^8.5.1",
     "rimraf": "^3.0.2",
     "uniqid": "^5.3.0",
     "wait-on": "^6.0.0"
