--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "docker-stop": "cd local && docker-compose down",
     "build": "tsc --project ./tsconfig.json",
     "dev": "(cd local && docker-compose down || true) && PORT=3006 nodemon index.ts",
+    "tsnode": "PORT=3006 ts-node index.ts",
     "package:build": "tsc --project tsconfig.json && (cd ./migrations && rimraf ./*.js && rimraf ./*.js.map && rimraf ./*.d.ts)",
     "package:unbuild": "rimraf ./*.js && rimraf ./*.js.map && rimraf ./*.d.ts && (cd ./migrations && rimraf ./*.js && rimraf ./*.js.map && rimraf ./*.d.ts && cd ../) && (cd ./imports && rimraf ./*.js && rimraf ./*.js.map && rimraf ./*.d.ts && cd ../) && (cd ./imports/gql && rimraf ./*.js && rimraf ./*.js.map && rimraf ./*.d.ts && cd ../)",
     "package:publish": "npm run package:build && npm publish --access public && npm run package:unbuild",
@@ -25,6 +26,7 @@
     "apollo-server-express": "^3.5.0",
     "cross-env": "^7.0.3",
     "dotenv": "^8.2.0",
+    "fkill": "^8.0.0",
     "graphql": "^15.5.0",
     "graphql-tag": "^2.11.0",
     "internal-ip": "^6.2.0",
