--- a/.github/workflows/dockerize.yaml
+++ b/.github/workflows/dockerize.yaml
@@ -18,7 +18,7 @@ jobs:
         with:
           node-version: '14.15'
       - name: build
-        run: npm ci && npm run build
+        run: npm ci && npm run package:build
       - name: Log in to Docker Hub
         uses: docker/login-action@v1
         with:
